@@ -3,6 +3,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 version 0.80cvs:
 	New Features:
 	* Ability to send files from the conversation window (Daniel Atallah)
+	* Drag a file into the buddy list or a conversation to send it to that
+	  buddy
 	* Yet more new commands and features for SILC (Stu Tomlinson)
 	* Gaim uses the new file chooser when compiled for GTK+ 2.4
 	  (Fernando Herrera)
